# facial-recognition-sorter

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RELEASE.md  build.rs  setup.iss
.github/workflows/: release.yml
scripts/: download_models.py  quantize_models.py
src/: face.rs  gui.rs  main.rs  utils.rs
