[package]
name = "facial-recognition-sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["directml"] }
image = "0.25.2"
ndarray = "0.17"
rayon = "1.10.0"
walkdir = "2.5.0"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
bincode = "1.3"
clap = { version = "4.5.9", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }

# GUI Dependencies
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["image"] }
rfd = "0.14.1" # File dialogs
tokio = { version = "1.38.0", features = ["full"] }
crossbeam-channel = "0.5.13"
directories = "6.0.0"
kamadak-exif = "0.5"

[build-dependencies]
winres = "0.1.12"
